<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>droneSimulator</name>
  <version>2.0.0</version>
  <description>Simulador de drone com autopiloto e integração ROS 2</description>
  <maintainer email="fezarosa.dev@gmail.com">zanoni</maintainer>
  <license>Apache License 2.0</license>

  <author email="fezarosa.dev@gmail.com">zanoni</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
