[project]
name = "drone-simulator"
version = "1.0.0"
description = "Drone simulator using VPython and NumPy"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Felipe Zanoni da Rosa" }
]

license = { text = "Proprietary - All rights reserved" }

keywords = ["drone", "simulation", "vpython", "physics"]

dependencies = [
    "vpython",
    "numpy"
]

# Dependências exclusivas para desenvolvimento (linter, type checker, etc.)
[project.optional-dependencies]
dev = [
    "basedpyright"
]

[project.urls]
Homepage = "https://github.com/fezarosa-dev/droneSimulator"
Repository = "https://github.com/fezarosa-dev/droneSimulator"

[project.scripts]
drone-sim = "drone_sim.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Configuração opcional do Basedpyright para o seu projeto
[tool.basedpyright]
include = ["src"]
typeCheckingMode = "standard" # Pode mudar para "strict" se quiser checagem ultra rígida